// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReloadReducerFromLocalStorage component should render view with default reducer 1`] = `
<div
  id="#form-reducer"
  locallyStoredReducer={
    Immutable.Map {
      "test": "abc",
    }
  }
/>
`;

exports[`ReloadReducerFromLocalStorage component should render view with given reducer 1`] = `
<div
  id="#record-reducer"
  locallyStoredReducer={
    Immutable.Map {
      "publication": Object {
        "pid": "UQ:123455",
      },
    }
  }
/>
`;
